--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -134,5 +134,17 @@
   }
   .locateMe{
     position: absolute;
-    
+    top: -50px;
+    cursor: pointer;
+    font-size: 17px;
+
+    display: flex;
+    gap: 3px;
+    align-items: center;
+    background-color: #00c2ff;
+    border: 2px solid black;
+    padding: 5px;
+    border-radius: 5px;
+
+
   }
