--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -88,63 +88,85 @@
       font-size: 0.9rem;
     }
   }
-  .bottom{
-    display: flex;
-    justify-content: space-between;
-    padding: 25px;
-    background-color: #00c2ff;
-    height: fit-content;
-    min-height: calc(100vh - 42px - 611.25px);
-    border-radius: 15px 15px 0px 0px;
-    position: relative;
-  }
-  .bottom .left{
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-  }
-  .bottom .left p{
-    font-size: 15px;
+.complete {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+.complete .cross{
+  position: absolute;
+  background-color: white;
+  border: none;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  top: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 17px;
+  cursor: pointer;
+  border: 2px solid black;
+  right: 20px;
+}
+.complete .cross:hover{
+  background-color: #4facfe;
+}
+.complete h1{
+  text-align: center;
+  font-size: 25px;
+  font-weight: 400;
+  padding: 5px;
+  background-color: #00c2ff;
+  border-bottom: 1px solid black;
 
-  }
-  .bottom .left .add{
-    display: flex;
-    flex-direction: column;
+}
+.complete .bottom{
+  min-height: calc(100vh - 75vh - 41.35px);
+  height: fit-content;
+  background-color: #00c2ff;
+  display: flex;
+  position: relative;
+  justify-content: space-between;
+  padding: 20px;
+  box-shadow: 0px 5px 5px 7px;
+}
+.complete .bottom .left{
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  
+}
+.complete .bottom .left .address{
+  font-size: 25px;
+  font-weight: 500;
 
-  }
-  .bottom .left .add .address{
-    font-size: 30px;
-    font-weight: 500;
-    
-  }
-  .bottom .right{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 15px 0; 
-  }
-  .bottom .right button{
-    color: #00c2ff;
-    font-weight: 500;
-    padding: 5px;
-    border: 2px solid black;
-    border-radius: 5px;
-    cursor: pointer;
+}
+.complete .bottom .locateMe{
+  position: absolute;
+  top: -60px;
+  padding: 5px;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  border: 2px solid black;
+  background-color: #00c2ff;
+  font-size: 18px;
+  font-weight: 400;
+  cursor: pointer;
+  box-shadow: 1px 2px 5px 0px;
+  
+}
+.complete .bottom .right{
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  padding-top: 10px;
+}
+.complete .bottom .right button{
+  padding: 5px;
+  border: 2px solid black;
+  font-size: 18px;
+  cursor: pointer;
 
-  }
-  .locateMe{
-    position: absolute;
-    top: -50px;
-    cursor: pointer;
-    font-size: 17px;
-
-    display: flex;
-    gap: 3px;
-    align-items: center;
-    background-color: #00c2ff;
-    border: 2px solid black;
-    padding: 5px;
-    border-radius: 5px;
-
-
-  }
+}
